#########################################################################
#                                                                       #
#                         Copyright (C)  2014                           #
#                              Internet2                                #
#                         All Rights Reserved                           #
#                                                                       #
#########################################################################
#
#  File:           Makefile.am
#
#  Author:         Paweł Gesek
#
#  Date:           Thu Nov  6 16:23:02 CET 2014
#
#  Description:    Makefile for the new HTML5 frontend

TEMPDIRS = dist

ndtdir = $(prefix)/ndt

nobase_ndt_DATA = jquery-1.4.4.min.js ie.css style.css gauge.min.js widget.html \
	   images/mlab-logo.png images/mlab-logo-small.png script.js \
           fonts/digital-7-mono.ttf fonts/League_Gothic.otf \
           fonts/League_Gothic.eot embed.html set-active-client.sh

EXTRA_DIST = $(nobase_ndt_DATA)
